fixed cell size on mobiles

--- a/src/components/flow/CellShade/styles.module.scss
+++ b/src/components/flow/CellShade/styles.module.scss
@@ -6,12 +6,11 @@
   left: 0;
   right: 0;
   top: 0;
-  max-height: $cell;
   background: linear-gradient(5deg, transparentize($content_bg, 0), transparentize($content_bg, 1));
   pointer-events: none;
   touch-action: none;
 
   @include tablet {
-    opacity: 0.5;
+    opacity: 0.7;
   }
 }
